# jconf

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  jconf.cpp
src/include/jconf/: jconf.hpp
test/: CMakeLists.txt  test.cpp
test/config/: config.json  req_schema.json  schema.json
